# cocktail-db

./: .gitignore  Dockerfile  build.gradle  docker-config.properties
.github/workflows/: build.yml
editor/: .gitignore  Dockerfile  README.md
editor/src/main/resources/: categorizedRecipeList.html  recipe.html  recipeList.html
editor/src/main/resources/static/: site.webmanifest
editor/src/test/resources/: config-test.properties
src/main/java/com/kaaphi/cocktails/dao/: CustomFormatRecipeDao.java  RecipeDao.java  SerializationRecipeDao.java
src/main/java/com/kaaphi/cocktails/domain/: AutoTag.java  Recipe.java  RecipeElement.java
src/main/java/com/kaaphi/cocktails/ui/: AutoCompleteJTextField.java  CocktailAutoCompleteOptions.java  CocktailDb.java  DirtyListener.java  MenuUtil.java  ModelViewer.java  RecipeEditor.java  RecipeElementsEditor.java  SmartQuoteDocumentListener.java  SortedListModel.java
src/main/java/com/kaaphi/cocktails/util/: Fractions.java
src/main/java/com/kaaphi/cocktails/web/: CocktailApp.java  CocktailAppModule.java  CocktailController.java  DockerSecretModule.java  (+6 more)
src/main/java/com/kaaphi/opf/: EbookOutputter.java  OpenPackagingFormat.java
src/main/resources/: VM_global_library.vm  index.html  recipe.html  recipeList.html
src/main/resources/static/: README.md  html_code.html  style.css
src/test/resources/: config-test.properties
web/: .gitignore  handlers.py  pyproject.toml  serverless.yml
web/cocktail_db/: ui.py
web/cocktail_db/templates/: base.html  index.html  recipe_list.html
web/tests/: test_cocktail_db.py
(+30 files in other folders)
