[tool.poetry]
name = "cocktail-db"
version = "0.1.0"
description = ""
authors = ["phil kaasa <phil@kaaphi.com>"]

[tool.poetry.dependencies]
python = "~3.9"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
boto3 = "^1.24.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
